[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyperclip"
description = "A cross-platform clipboard module for Python. (Only handles plain text for now.)"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Al Sweigart", email = "al@inventwithpython.com" },
]
keywords = [
    "clip",
    "clipboard",
    "copy",
    "paste",
    "xclip",
    "xsel",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, !=3.6.*"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/asweigart/pyperclip"

[tool.hatch.version]
path = "src/pyperclip/__init__.py"
